Hidden sockets add padding to group nodes. #111804

Closed
opened 2023-09-01 20:10:25 +02:00 by Sun Kim · 3 comments
Contributor

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-01 01:10, hash: 68440742ce81
Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-25 22:23, hash: 67843e188b24

I'm suspecting one of the node panels patches caused this.

Short description of error
Hidden sockets add padding to group nodes when they are hidden.

Before (2023-08-25 22:23, hash: 67843e188b24)

If all sockets are hidden the heights of nodes are consistent regardless of the number of sockets they have

group_nodes_working.png

Now (2023-09-01 01:10, hash: 68440742ce81)

Group nodes with more sockets are taller when sockets are hidden. This is more apparent with panels. Panels with more sockets under them have taller padding than others.

group_nodes_broken.png

This does not happen with normal nodes.

normal_node_with_hidden_sockets.png

Exact steps for others to reproduce the error

  • Create a group node
  • Inside the group node add many sockets
  • Outside of the group node, hide unconnected sockets (Ctrl + H)
  • See it gets taller with more hidden sockets

Test file: sockets_padding.blend

**Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-01 01:10, hash: `68440742ce81` Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-25 22:23, hash: `67843e188b24` I'm suspecting one of the node panels patches caused this. **Short description of error** Hidden sockets add padding to group nodes when they are hidden. ### Before (2023-08-25 22:23, hash: `67843e188b24`) If all sockets are hidden the heights of nodes are consistent regardless of the number of sockets they have ![group_nodes_working.png](/attachments/5a5954a4-b15b-40b5-9a94-5ed7b6a8ac4f) ### Now (2023-09-01 01:10, hash: `68440742ce81`) Group nodes with more sockets are taller when sockets are hidden. This is more apparent with panels. Panels with more sockets under them have taller padding than others. ![group_nodes_broken.png](/attachments/20812f54-1802-498a-b3f8-e818380d209a) This does not happen with normal nodes. ![normal_node_with_hidden_sockets.png](/attachments/55bae255-68b6-48c5-9bad-80f8f2ba72f5) **Exact steps for others to reproduce the error** - Create a group node - Inside the group node add many sockets - Outside of the group node, hide unconnected sockets (`Ctrl + H`) - See it gets taller with more hidden sockets Test file: [sockets_padding.blend](/attachments/7be0abcd-62bc-4041-9d03-916a5e7a318f)
Sun Kim added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-01 20:10:26 +02:00
@LukasTonne /
Iliya Katushenock added the
Interest
Nodes & Physics
Interest
User Interface
labels 2023-09-01 20:16:24 +02:00
Lukas Tönne self-assigned this 2023-09-01 20:26:54 +02:00

I'm considering the report confirmed then.

I'm considering the report confirmed then.
Dalai Felinto added this to the Nodes & Physics project 2023-09-05 12:20:57 +02:00
Member

Thank you for this thorough bug report. I'm going to look into it soon, just wanted to say that i appreciate the effort put into comparing all the node ui :)

Thank you for this thorough bug report. I'm going to look into it soon, just wanted to say that i appreciate the effort put into comparing all the node ui :)
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-06 10:34:28 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111804
No description provided.